experimental/parser/testdata/lexer/braces/unopened.proto.stderr.txt
error: encountered unmatched `)` delimiter
  --> testdata/lexer/braces/unopened.proto:1:1
   |
 1 | )
   | ^ expected a closing `(`

encountered 1 error
